[DE190463] feat: finalize auction platform setup